playterのコンテンツを別ディレクトリに移動

--- a/index.html
+++ b/index.html
@@ -3,114 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-    <title>OpenAIとは</title>
-    <style>
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        font-family: Arial, sans-serif;
-        overflow: scroll;
-      }
-
-      h1 {
-        font-size: 32px;
-        font-weight: bold;
-        margin-bottom: 20px;
-      }
-
-      p {
-        font-size: 16px;
-        line-height: 1.5;
-        margin-bottom: 20px;
-      }
-
-      img {
-        width: 100%;
-        max-width: 600px;
-        height: auto;
-        margin-bottom: 20px;
-      }
-
-      table {
-        border-collapse: collapse;
-        width: 100%;
-        margin-bottom: 20px;
-      }
-
-      th,
-      td {
-        border: 1px solid #ddd;
-        text-align: left;
-        padding: 8px;
-      }
-
-      th {
-        background-color: #f2f2f2;
-        font-weight: bold;
-      }
-      #main_container {
-        width: 350px;
-      }
-    </style>
+    <title>ホーム</title>
   </head>
 
-  <body>
-    <div id="main-container">
-      <h1>OpenAIとは</h1>
-      <img src="https://example.com/openai.png" alt="OpenAIのロゴ" />
-      <p>OpenAIは、人工知能の研究・開発を行う非営利団体です。2015年に設立され、イーロン・マスクやサム・アルトマンらの起業家によって創設されました。</p>
-      <p>OpenAIは、人工知能の研究に取り組むことで、人類が未来に向かって直面する複雑な問題に対処することを目的としています。そのため、自己学習するAIの開発に力を入れており、2019年には、人間を模倣する言語モデル「GPT-2」を発表しました。</p>
-      <p>現在、OpenAIは、自動運転車や医療、エネルギーなどの分野でのAIの活用に向けた研究を行っており、その成果は世界中で注目されています。</p>
-      <h1>OpenAIが提供する機械学習モデル</h1>
-      <table>
-        <thead>
-          <tr>
-            <th>モデル名</th>
-            <th>説明</th>
-            <th>リンク</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>GPT</td>
-            <td>自然言語処理のための言語モデル</td>
-            <td><a href="https://openai.com/models/gpt-2/">https://openai.com/models/gpt-2/</a></td>
-          </tr>
-          <tr>
-            <td>GPT-2</td>
-            <td>自然言語処理のための言語モデル</td>
-            <td><a href="https://openai.com/models/gpt-2/">https://openai.com/models/gpt-2/</a></td>
-          </tr>
-          <tr>
-            <td>GPT-3</td>
-            <td>自然言語処理のための言語モデル</td>
-            <td><a href="https://openai.com/models/gpt-3/">https://openai.com/models/gpt-3/</a></td>
-          </tr>
-          <tr>
-            <td>Codex</td>
-            <td>自然言語でのコード生成のためのモデル</td>
-            <td><a href="https://openai.com/models/codex/">https://openai.com/models/codex/</a></td>
-          </tr>
-          <tr>
-            <td>DALL-E</td>
-            <td>任意の画像に対して、文章に従って画像を生成するモデル</td>
-            <td><a href="https://openai.com/dall-e/">https://openai.com/dall-e/</a></td>
-          </tr>
-          <tr>
-            <td>CLIP</td>
-            <td>テキストと画像の相互関係を理解するためのモデル</td>
-            <td><a href="https://openai.com/models/clip/">https://openai.com/models/clip/</a></td>
-          </tr>
-          <tr>
-            <td>Jukebox</td>
-            <td>音楽の生成モデル</td>
-            <td><a href="https://openai.com/jukebox/">https://openai.com/jukebox/</a></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </body>
+  <body></body>
 </html>
