ディレクトリ構成を整理

--- a/chat/0000000000/index.html
+++ b/chat/0000000000/index.html
@@ -6,10 +6,10 @@
     <meta name="twitter:card" content="player" />
     <meta name="twitter:title" content="OpenAIとは" />
     <meta name="twitter:description" content="OpenAIは、人工知能の研究・開発を行う非営利団体です。" />
-    <meta name="twitter:player" content="https://m-atarashi.github.io/ChatGPT-in-Tweet/test/" />
+    <meta name="twitter:player" content="./index.html" />
     <meta name="twitter:player:width" content="350" />
     <meta name="twitter:player:height" content="350" />
-    <meta name="twitter:image" content="https://m-atarashi.github.io/ChatGPT-in-Tweet/resources/img/apple-touch-icon.png" />
+    <meta name="twitter:image" content="../resources/img/apple-touch-icon.png" />
     <title>OpenAIとは</title>
   </head>
   <body></body>
