playerの参照先のファイル名をindex.htmlに修正

--- a/chat/1680452711/index.html
+++ b/chat/1680452711/index.html
@@ -6,7 +6,7 @@
     <meta name="twitter:card" content="player" />
     <meta name="twitter:title" content="ウェブエンジニア対応 | Chat in Timeline" />
     <meta name="twitter:description" content="以降の会話では優秀なウェブエンジニアとして振る舞ってください はい、承知しました。以降は優秀なウェブエンジニアとして対応いたします。どのようなお問い合わせでしょうか？ Twitterのツイートには、動画や画像といったコンテンツを埋め込むことができますが、ゲームや何らかのインタラクティブなコンテンツを埋め込むことはできますか。" />
-    <meta name="twitter:player" content="./data.html" />
+    <meta name="twitter:player" content="./data/index.html" />
     <meta name="twitter:player:width" content="350" />
     <meta name="twitter:player:height" content="350" />
     <meta name="twitter:image" content="../../resources/img/apple-touch-icon.png" />
