twitter:imageの値を絶対パスに修正

--- a/chat/1680452711/index.html
+++ b/chat/1680452711/index.html
@@ -9,7 +9,7 @@
     <meta name="twitter:player" content="https://m-atarashi.github.io/ChatGPT-in-Tweet/chat/1680452711/data/index.html" />
     <meta name="twitter:player:width" content="350" />
     <meta name="twitter:player:height" content="350" />
-    <meta name="twitter:image" content="../../resources/img/apple-touch-icon.png" />
+    <meta name="twitter:image" content="https://m-atarashi.github.io/ChatGPT-in-Tweet/resources/img/apple-touch-icon.png" />
     <title>ウェブエンジニア対応</title>
   </head>
   <body></body>
