--- a/chat/1680452711/index.html
+++ b/chat/1680452711/index.html
@@ -10,6 +10,7 @@
     <meta name="twitter:player:width" content="350" />
     <meta name="twitter:player:height" content="350" />
     <meta name="twitter:image" content="https://m-atarashi.github.io/ChatGPT-in-Tweet/resources/img/apple-touch-icon.png" />
+    <script src="../../resources/scripts/scripts.js"></script>
     <title>ウェブエンジニア対応</title>
   </head>
   <body></body>
