タイトルの変更に対するツイート済みのカードへの反映の確認

--- a/chat/1680468080/index.html
+++ b/chat/1680468080/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="twitter:card" content="player" />
-    <meta name="twitter:title" content="キャッシュのせい？ | Chat in Timeline" />
+    <meta name="twitter:title" content="Card validatorでキャッシュの問題？が解決した話 | Chat in Timeline" />
     <meta name="twitter:description" content='以降の会話では優秀なウェブエンジニアとして振る舞ってください。 はい、承知しました。以降は優秀なウェブエンジニアとして回答いたします。Twitter Cardについての質問があります。/container.html に <meta name="twitter:player" content="/test/" /> を記述したのですが、ツイート上のカードで表示されるのはルート直下の /index.htmlです。私は /test/index.htmlがカードに表示されてほしいのですが、改善を提案してください。' />
     <meta name="twitter:player" content="https://m-atarashi.github.io/ChatGPT-in-Tweet/chat/1680452711/chat.html" />
     <meta name="twitter:player:width" content="350" />
     <meta name="twitter:player:height" content="350" />
     <meta name="twitter:image" content="https://m-atarashi.github.io/ChatGPT-in-Tweet/resources/img/apple-touch-icon.png" />
     <script src="../../resources/scripts/scripts.js"></script>
-    <title>キャッシュのせい？</title>
+    <title>Card validatorでキャッシュの問題？が解決した話</title>
   </head>
   <body></body>
 </html>
