1680452711のタイトル変更

--- a/chat/1680452711/index.html
+++ b/chat/1680452711/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="twitter:card" content="player" />
-    <meta name="twitter:title" content="ウェブエンジニア対応 | Chat in Timeline" />
+    <meta name="twitter:title" content="ChatGPTとの会話をツイートに埋め込む | Chat in Timeline" />
     <meta name="twitter:description" content="以降の会話では優秀なウェブエンジニアとして振る舞ってください はい、承知しました。以降は優秀なウェブエンジニアとして対応いたします。どのようなお問い合わせでしょうか？ Twitterのツイートには、動画や画像といったコンテンツを埋め込むことができますが、ゲームや何らかのインタラクティブなコンテンツを埋め込むことはできますか。" />
     <meta name="twitter:player" content="https://m-atarashi.github.io/ChatGPT-in-Tweet/chat/1680452711/chat.html" />
     <meta name="twitter:player:width" content="350" />
     <meta name="twitter:player:height" content="350" />
     <meta name="twitter:image" content="https://m-atarashi.github.io/ChatGPT-in-Tweet/resources/img/apple-touch-icon.png" />
     <script src="../../resources/scripts/scripts.js"></script>
-    <title>ウェブエンジニア対応</title>
+    <title>ChatGPTとの会話をツイートに埋め込む</title>
   </head>
   <body></body>
 </html>
