動的なページをplayer contentに指定するテスト

--- a/chat/0000000000/index.html
+++ b/chat/0000000000/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:player:width" content="350" />
     <meta name="twitter:player:height" content="350" />
     <meta name="twitter:image" content="https://m-atarashi.github.io/ChatGPT-in-Tweet/resources/img/apple-touch-icon.png" />
-    <script src="../../resources/scripts/scripts.js"></script>
+    <!-- <script src="../../resources/scripts/scripts.js"></script> -->
     <title>OpenAIとは</title>
   </head>
   <body></body>
