動的なページをplayer contentに指定するテスト

--- a/chat/0000000000/index.html
+++ b/chat/0000000000/index.html
@@ -6,7 +6,7 @@
     <meta name="twitter:card" content="player" />
     <meta name="twitter:title" content="OpenAIとは" />
     <meta name="twitter:description" content="OpenAIは、人工知能の研究・開発を行う非営利団体です。" />
-    <meta name="twitter:player" content="https://twitter.com/home" />
+    <meta name="twitter:player" content="https://twitter.com/_sheon_/status/1643368750639620098" />
     <meta name="twitter:player:width" content="350" />
     <meta name="twitter:player:height" content="350" />
     <meta name="twitter:image" content="https://m-atarashi.github.io/ChatGPT-in-Tweet/resources/img/apple-touch-icon.png" />
